# sonar

./: .dockerignore  Cargo.toml  Dockerfile  README.md  clippy.toml  rustfmt.toml
src/: docker.rs  main.rs  models.rs  prometheus.rs
