[package]
name = "sonar"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = { version= "1.0.149"}
serde = { version = "1.0.228", features = ["serde_derive"] }
clap = {version = "4.5.54", features = ["derive"]}
axum = "0.8.8"
