[package]
name = "sonar"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization

